# mem_proc

./: CMakeLists.txt  build.sh
libpagemap/: Android.mk
procmem/: Android.mk
procrank/: Android.mk  procrank.c
